<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numberSelector"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:entries="@array/stuff"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/distanceBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="500dp"
        android:contentDescription="@string/distanceDescription"
        android:onClick="Change();"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/di" />

    <ImageButton
        android:id="@+id/tempBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/tempDescription"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/weightBtn"
        app:layout_constraintStart_toEndOf="@+id/distanceBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tp" />

    <ImageButton
        android:id="@+id/weightBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/weightDescription"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kg" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="220dp"
        android:text="@string/text1"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:text="@string/text2"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        android:text="@string/text3"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="15dp"
        android:text="@string/text4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        android:text="@string/text5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="15dp"
        android:text="@string/text6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>